[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-youtube-transcriber"
version = "0.1.0"
description = "MCP server providing YouTube search and transcript tools."
authors = [
  { name = "YouTube Transcriber", email = "example@example.com" },
]
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.2.0",
  "yt-dlp>=2024.4.9",
  "youtube-transcript-api>=0.6.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
Homepage = "https://example.com/mcp-youtube-transcriber"

